k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nipponbid
  labels:
    app.kubernetes.io/name: nipponbid
    environment: local
