k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nipponbid-ingress
  namespace: nipponbid
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"       # allow file uploads up to 50MB
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"    # long timeout for Excel exports
spec:
  ingressClassName: nginx
  rules:
    - host: nipponbid.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80


    - host: api.nipponbid.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
